Show drop broadcast audience before notifying followers
